Add index content

--- a/_art/example.html
+++ b/_art/example.html
@@ -1,7 +1,7 @@
 ---
 layout: photo
 title: Farol das Conchas
-slug: /farol-das-conchas
+slug: /example
 artist: bruno
 image: /assets/images/ilha-do-mel-parana-001.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
