--- a/_art/coqueiros-gus-schiavon.html
+++ b/_art/coqueiros-gus-schiavon.html
@@ -1,14 +1,14 @@
 ---
 layout: photo
-title: Farol das Conchas
-slug: /farol-das-conchas
+title: Coqueiros
 artist: gus
-image: /assets/images/ilha-do-mel-parana-001.jpg
+image: /assets/images/gus-schiavon-0877.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 40cm
+orientation: Landscape
 print_standard: Fine Art 40gm
-number_of_prints: 100
-price: 2000
+number_of_prints: 10
+price: 1300
 other_dimensions:
   - size:
 ---
