--- a/_art/maracaipe-gus-schiavon.html
+++ b/_art/maracaipe-gus-schiavon.html
@@ -1,13 +1,13 @@
 ---
 layout: photo
-title: Farol das Conchas
-slug: /example
-artist: bruno
-image: /assets/images/ilha-do-mel-parana-001.jpg
+title: Maracaípe
+artist: gus
+image: /assets/images/gus-schiavon-4529.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 40cm
+orientation: Portrait
 print_standard: Fine Art 40gm
-number_of_prints: 100
+number_of_prints: 1
 price: 2000
 other_dimensions:
   - size:
