--- a/_art/paraiso-perdido-gus-schiavon.html
+++ b/_art/paraiso-perdido-gus-schiavon.html
@@ -1,13 +1,13 @@
 ---
 layout: photo
-title: Farol das Conchas
-slug: /example-2
+title: Paraíso Perdido
 artist: gus
-image: /assets/images/ilha-do-mel-parana-001.jpg
+image: /assets/images/gus-schiavon-0001.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 40cm
+orientation: Landscape
 print_standard: Fine Art 40gm
-number_of_prints: 100
+number_of_prints: 1
 price: 2000
 other_dimensions:
   - size:
