--- a/_art/ceus-da-ilha-fer-santos.html
+++ b/_art/ceus-da-ilha-fer-santos.html
@@ -1,15 +1,19 @@
 ---
 layout: photo
-title: Céus da Ilha
+title: Céu da Ilha
 artist: fer
 co-artist: alice
 image: /assets/images/ceus-da-ilha-fer-santos.jpg
-description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description: >-
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
+  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
+  harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Fine Art 40gm
 number_of_prints: 10
 price: 1300
 other_dimensions:
-  - size:
+  - size: 90cm x 60cm
 ---
+
