--- a/_art/sumaúma.html
+++ b/_art/sumaúma.html
@@ -1,9 +1,9 @@
 ---
 layout: photo
 title: Sumaúma
-artist:
+artist: fer
 co-artist:
-image: /assets/images/gus-schiavon-0877.jpg
+image: /assets/images/sumaúma.jpg
 description: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
@@ -16,3 +16,4 @@ price: 1300
 other_dimensions:
   - size:
 ---
+
