Updated 2 files via CloudCannon

--- a/_art/sumaúma.html
+++ b/_art/sumaúma.html
@@ -3,7 +3,7 @@ layout: photo
 title: Sumaúma
 artist: fer
 co-artist:
-image: /assets/images/sumaúma.jpg
+image: /assets/images/sumaúma-1.jpg
 description: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
