--- a/_art/glaciar-perito-moreno.html
+++ b/_art/glaciar-perito-moreno.html
@@ -8,12 +8,12 @@ description: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
-dimensions: 60cm x 90cm
+dimensions: 90cm x 60cm
 orientation: Landscape
 print_standard: Fine Art 40gm
 number_of_prints: 10
 price: 1300
 other_dimensions:
-  - size:
+  - size: 60cm x 40cm
 ---
 
