Add sponsor logos

--- a/_art/o-voo-fer-santos.html
+++ b/_art/o-voo-fer-santos.html
@@ -7,7 +7,7 @@ image: /assets/images/o-voo-fer-santos.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 40cm x 60cm
 orientation: Landscape
-print_standard: Fine Art 40gm
+print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
 price: 1300
 other_dimensions:
