--- a/_art/paraiso-perdido-gus-schiavon.html
+++ b/_art/paraiso-perdido-gus-schiavon.html
@@ -7,8 +7,8 @@ image: /assets/images/gus-schiavon-0001.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 40cm
 orientation: Landscape
-print_standard: Fine Art 40gm
-number_of_prints: 1
+print_standard: Felix Schoeller True Fibre 200g/m2
+number_of_prints: 5
 price: 2500
 other_dimensions:
   - size:
