--- a/_art/coqueiros-gus-schiavon.html
+++ b/_art/coqueiros-gus-schiavon.html
@@ -7,7 +7,7 @@ image: /assets/images/gus-schiavon-0877.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 90cm
 orientation: Landscape
-print_standard: Fine Art 40gm
+print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 5
 price: 1500
 other_dimensions:
