--- a/_art/dupla-expo-b-raiz-itapema.html
+++ b/_art/dupla-expo-b-raiz-itapema.html
@@ -7,7 +7,7 @@ image: /assets/images/dupla-expo-b-raiz.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 40cm
 orientation: Portrait
-print_standard: Fine Art 40gm
+print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
 price: 1300
 other_dimensions:
