--- a/_art/maracaipe-gus-schiavon.html
+++ b/_art/maracaipe-gus-schiavon.html
@@ -5,9 +5,9 @@ artist: gus
 co-artist: alice
 image: /assets/images/gus-schiavon-4529.jpg
 description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
-dimensions: 60cm x 40cm
+dimensions: 60cm x 90cm
 orientation: Portrait
-print_standard: Fine Art 40gm
+print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 1
 price: 2000
 other_dimensions:
