--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
 ---
-<section class="container mx-auto py-12 px-12">
-  <div class="flex flex-col items-end md:flex-row gap-8 mb-24">
+<section class="container mx-auto py-12 px-4 md:px-12">
+  <div class="flex flex-col md:items-end md:flex-row gap-8 mb-12 md:mb-24">
     <h1 class="font-bold font-heading text-9xl text-yellow-400 uppercase mb-8">
       Re<br>co<br>nec<br>ta
     </h1>
@@ -39,7 +39,7 @@ header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
       
     </div>
   </div>
-  <h2 class="font-heading uppercase font-bold text-2xl text-gray-200">Realização e Apoio:</h2>
+  <h2 class="font-heading uppercase text-center sm:text-left font-bold text-2xl text-gray-200 mb-6">Realização e Apoio:</h2>
   <div class="flex flex-wrap gap-8 justify-between items-center mb-12">
     <div class="md:flex-1 flex-shrink-0 sm:flex-shrink w-40 md:w-20 mx-auto">
       <img src="/assets/images/the-oak.png" alt="">
@@ -60,8 +60,8 @@ header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
     {% assign name = item.artist %}
     {% assign creator = site.data.creators.photographers | where_exp: "artist", "artist.nickname contains name" %}
     
-    <a href="{{item.url}}" class="p-2 w-full md:w-1/2 lg:w-1/3 rounded-md ">
-      <div class="flex flex-col overflow-hidden art-card">
+    <a href="{{item.url}}" class="p-2 w-full md:w-1/2 lg:w-1/3">
+      <div class="flex flex-col overflow-hidden rounded-md art-card">
         <div class="h-30 lg:h-auto lg:flex-1 overflow-hidden">
           <img src="{{item.image}}" alt="{% for artist in creator %}{{item.title}} por {{artist.name}}{% endfor %}" class="object-cover w-full h-full">
         </div>
@@ -80,19 +80,22 @@ header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
           </div>
           {% endfor %}
           <div class="flex gap-2">
-            <p class="font-body">
+            <p class="text-xs sm:text-sm md:text-base font-body">
               {{item.dimensions}}
             </p>
-            <span>|</span>
-            <p class="font-body">
-              Cópia 1/{{item.number_of_prints}}
+            <span class="text-xs sm:text-sm md:text-base">|</span>
+            <p class="text-xs sm:text-sm md:text-base font-body">
+              Tiragem limitada 1/{{item.number_of_prints}}
             </p>
           </div>
-          <p class="font-body">
+          <p class="text-xs sm:text-sm md:text-base font-body">
             Impressão em papel {{item.print_standard}}
           </p>
-          <div class="w-24">
-            <img src="/assets/images/farbewerk.png" alt="farbewerk logo" class="object-contain w-full h-full">
+          <div class="flex gap-2 items-center">
+            <p class="font-body">Qualidade </p>
+            <div class="w-24">
+              <img src="/assets/images/farbewerk.png" alt="farbewerk logo" class="object-contain w-full h-full">
+            </div>
           </div>
         </div>
       </div>
