--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
     <a href="{{item.url}}" class="p-2 w-full md:w-1/2 lg:w-1/3">
       <div class="flex flex-col overflow-hidden rounded-md art-card">
         <div class="h-30 lg:h-auto lg:flex-1 overflow-hidden">
-          <img src="{{item.image}}" alt="{% for artist in creator %}{{item.title}} por {{artist.name}}{% endfor %}" class="object-cover w-full h-full">
+          {% picture jpt-webp "{{item.image | default: '/assets/images/placeholder.jpg'}}" --img alt="{{item.title}}" class="object-cover w-full h-full" %}
+          
         </div>
         <div class="flex flex-col gap-4 bg-gray-300 p-6">
           <h3 class="font-heading font-bold text-2xl text-gray-800">
@@ -94,7 +95,8 @@ header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
           <div class="flex gap-2 items-center">
             <p class="font-body">Qualidade </p>
             <div class="w-24">
-              <img src="/assets/images/farbewerk.png" alt="farbewerk logo" class="object-contain w-full h-full">
+              {% picture jpt-webp "/assets/images/farbewerk.png" --img alt="farbewerk logo" class="object-contain w-full h-full"%}
+              <!-- <img src="/assets/images/farbewerk.png" alt="farbewerk logo" class="object-contain w-full h-full"> -->
             </div>
           </div>
         </div>
