Updated 2 files via CloudCannon

--- a/_art/escala-humana.html
+++ b/_art/escala-humana.html
@@ -1,9 +1,9 @@
 ---
 layout: photo
-title: Escala Humana
-artist:
+title: Escala Humana_Ilha do Mel_2018
+artist: bruno
 co-artist:
-image: /assets/images/gus-schiavon-0877.jpg
+image: /assets/images/mg-6420.jpg
 description: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
@@ -16,3 +16,4 @@ price: 1300
 other_dimensions:
   - size:
 ---
+
