Updated '_art/escala-humana.html' via CloudCannon

--- a/_art/escala-humana.html
+++ b/_art/escala-humana.html
@@ -4,10 +4,7 @@ title: Escala Humana_Ilha do Mel_2018
 artist: bruno
 co-artist:
 image: /assets/images/mg-6420.jpg
-description: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description: Fim de tarde com a vista do Farol das Conchas. Ilha do Mel, litoral do Paraná.
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Fine Art 40gm
