--- a/_art/impacto-1-bruno-santos.html
+++ b/_art/impacto-1-bruno-santos.html
@@ -1,9 +1,9 @@
 ---
 layout: photo
-title: Impacto 1
+title: Rastro Humano_Ilha do Superagui_2018
 artist: bruno
 image: /assets/images/impacto-1-bruno-santos.jpg
-description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description: Qual é o caminho que estamos trilhando? Para onde esse caminho vai nos levar?
 dimensions: 40cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
@@ -12,3 +12,4 @@ price: 1300
 other_dimensions:
   - size:
 ---
+
