--- a/_art/impacto-1-bruno-santos.html
+++ b/_art/impacto-1-bruno-santos.html
@@ -1,6 +1,6 @@
 ---
 layout: photo
-title: Rastro Humano I_Ilha do Superagui_2020
+title: Pegada Humana I_Ilha do Superagui_2020
 artist: bruno
 image: /assets/images/impacto-1-bruno-santos.jpg
 description: Qual é o caminho que estamos trilhando? Para onde esse caminho vai nos levar?
