Updated 2 files via CloudCannon

--- a/_art/impacto-1-bruno-santos.html
+++ b/_art/impacto-1-bruno-santos.html
@@ -1,8 +1,9 @@
 ---
 layout: photo
-title: Pegada Humana I_Ilha do Superagui_2020
+title: Pegada Humana II_Ilha das Peças_2019
 artist: bruno
-image: /assets/images/impacto-1-bruno-santos.jpg
+image: >-
+  /assets/images/89318ec4-8f57-4cdd-b75e-09c12cc9c664-a29b0352-aacc-4687-b846-af74311fe932-2.jpg
 description: Qual é o caminho que estamos trilhando? Para onde esse caminho vai nos levar?
 dimensions: 40cm x 60cm
 orientation: Landscape
