--- a/_art/escala-humana.html
+++ b/_art/escala-humana.html
@@ -1,10 +1,10 @@
 ---
 layout: photo
-title: Escala Humana_Ilha do Mel_2018
+title: Mar a dentro_Ilha do Mel_2018
 artist: bruno
 co-artist:
-image: /assets/images/mg-6420.jpg
-description: Fim de tarde com a vista do Farol das Conchas. Ilha do Mel, litoral do Paraná.
+image: /assets/images/img-8949.jpg
+description: O Mar e sua força.
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Fine Art 40gm
