Updated 2 files via CloudCannon

--- a/_art/escala-humana.html
+++ b/_art/escala-humana.html
@@ -1,10 +1,10 @@
 ---
 layout: photo
-title: Mar adentro_Ilha do Mel_2018
+title: Pegada Natural_Ilha do Mel_2020
 artist: bruno
 co-artist:
-image: /assets/images/img-8949.jpg
-description: O Mar e sua força.
+image: /assets/images/img-6386.JPG
+description: Natureza Intocada
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Fine Art 40gm
