Updated 2 files via CloudCannon

--- a/_art/pegada-humana-i-ilha-do-mel-2020.html
+++ b/_art/pegada-humana-i-ilha-do-mel-2020.html
@@ -1,18 +1,17 @@
 ---
 layout: photo
 title: Pegada Humana I_Ilha do Mel_2020
-artist:
+artist: bruno
 co-artist:
-image: /assets/images/gus-schiavon-0877.jpg
-description: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+image: >-
+  /assets/images/6dd2bc09-c105-43ed-a91e-883a17e81011-a5fb831c-0f72-4877-abff-19dabbbbf924-editar-copiar.jpg
+description: Qual caminho estamos seguindo!? Para onde esses passos irão nos levar?
 dimensions: 60cm x 40cm
-orientation: Landscape
+orientation: Vertical
 print_standard: Fine Art 40gm
 number_of_prints: 10
 price: 1300
 other_dimensions:
   - size:
 ---
+
