Updated 2 files via CloudCannon

--- a/_art/escala-humana-ilha-do-melo-2018.html
+++ b/_art/escala-humana-ilha-do-melo-2018.html
@@ -1,9 +1,9 @@
 ---
 layout: photo
-title: Escala Humana_Ilha do Melo_2018
+title: Escala Humana_Ilha do Mel_2018
 artist: bruno
 co-artist:
-image: /assets/images/mg-6420.jpg
+image: /assets/images/mg-6420-1.jpg
 description: Vista do final de tarde, do Farol das Conchas, Ilha de Mel.
 dimensions: 60x90 cm
 orientation: Vertical
