Updated 2 files via CloudCannon

--- a/_art/alvéolo.html
+++ b/_art/alvéolo.html
@@ -1,13 +1,16 @@
 ---
 layout: photo
 title: Alvéolo
-artist:
+artist: thais
 co-artist:
-image: /assets/images/gus-schiavon-0877.jpg
+image: /assets/images/alveolo-raiz.jpg
 description: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+  •Alvéolo: substantivo masculino; cada uma das cavidades que formam o favo de
+  mel das abelhas; cavidade no tecido pulmonar. Geomorfologia. Pequena depressão
+  escavada numa rocha homogênea; pequena cavidade em que se fixa um órgão•
+
+
+  Fotografia analógica, em dupla-exposição. Cine-film, 35mm. 
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Fine Art 40gm
@@ -16,3 +19,4 @@ price: 1300
 other_dimensions:
   - size:
 ---
+
