--- a/_art/dupla-expo-b-raiz-itapema.html
+++ b/_art/dupla-expo-b-raiz-itapema.html
@@ -1,10 +1,13 @@
 ---
 layout: photo
-title: Dupla Expo B
+title: Gravitas
 artist: thais
 co-artist: fellipe
 image: /assets/images/dupla-expo-b-raiz.jpg
-description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description: >-
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
+  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
+  harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 40cm
 orientation: Portrait
 print_standard: Felix Schoeller True Fibre 200g/m2
@@ -13,3 +16,4 @@ price: 1300
 other_dimensions:
   - size:
 ---
+
