--- a/_art/ceu-de-morretes-raiz-itapema.html
+++ b/_art/ceu-de-morretes-raiz-itapema.html
@@ -1,6 +1,6 @@
 ---
 layout: photo
-title: Ascender - mirada em Morretes
+title: Ascender - mirada em Morretes. Film 35mm.
 artist: thais
 co-artist: alice
 image: /assets/images/ceu-de-morretes-raiz.jpg
