Updated '_art/dupla-expo-b-raiz-itapema.html' via CloudCannon

--- a/_art/dupla-expo-b-raiz-itapema.html
+++ b/_art/dupla-expo-b-raiz-itapema.html
@@ -1,6 +1,6 @@
 ---
 layout: photo
-title: Gravitas
+title: Gravitas •Film 35mm•
 artist: thais
 co-artist: fellipe
 image: /assets/images/dupla-expo-b-raiz.jpg
