--- a/_art/lepidoptera.html
+++ b/_art/lepidoptera.html
@@ -1,14 +1,14 @@
 ---
 layout: photo
 title: Lepidoptera
-artist:
+artist: thais
 co-artist:
-image: /assets/images/gus-schiavon-0877.jpg
+image: /assets/images/lepidoptera---raiz.jpg
 description: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
-dimensions: 60cm x 40cm
+dimensions: 60cm x 90cm
 orientation: Landscape
 print_standard: Fine Art 40gm
 number_of_prints: 10
@@ -16,3 +16,4 @@ price: 1300
 other_dimensions:
   - size:
 ---
+
