Updated '_art/lepidoptera.html' via CloudCannon

--- a/_art/lepidoptera.html
+++ b/_art/lepidoptera.html
@@ -9,7 +9,7 @@ description: >-
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 90cm
-orientation: Landscape
+orientation: Portrait
 print_standard: Fine Art 40gm
 number_of_prints: 10
 price: 1300
