Updated 2 files via CloudCannon

--- a/_art/mar-adentro-ilha-do-mel-2018-1.html
+++ b/_art/mar-adentro-ilha-do-mel-2018-1.html
@@ -1,18 +1,18 @@
 ---
 layout: photo
 title: Mar adentro_Ilha do Mel_2018
-artist:
+artist: bruno
 co-artist:
-image: /assets/images/gus-schiavon-0877.jpg
-description: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
-dimensions: 60cm x 40cm
+image: /assets/images/aef69688-54a4-4ddd-8e97-6e85225bce49.jpeg
+description: |-
+  O Mar mostra sua força.
+  A sua força mostra o a Mar.
+dimensions: 60cmx90cm
 orientation: Landscape
 print_standard: Fine Art 40gm
 number_of_prints: 10
-price: 1300
+price: 2000
 other_dimensions:
   - size:
 ---
+
