--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
     
     {% for item in site.art %}
     {% assign name = item.artist %}
-    {% assign creator = site.data.creators.photographers | where_exp: "artist", "artist.nickname contains name" %}
+    {% assign creator = site.data.creators.photographers | where_exp: "artist", "artist._nickname contains name" %}
     
     <a href="{{item.url}}" class="p-2 w-full md:w-1/2 lg:w-1/3">
       <div class="flex flex-col overflow-hidden rounded-md art-card">
