Add checkout flow

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ header_background_image: /assets/images/ilha-do-mel-parana-001.jpg
 <section class="container mx-auto py-12 px-4 md:px-12">
   <div class="flex flex-col md:items-start md:flex-row gap-8 mb-12">
     <h1 class="font-bold font-heading text-7xl md:text-8xl lg:text-9xl text-yellow-400 lg:text-right uppercase mb-8 md:mb-0" style="line-height: 0.93;">
-      Re<br>co<br>nec<br>ta
+      Re<br>co<br>nec<br>ta!
     </h1>
     <div class="flex flex-col justify-end">
       <div class="flex flex-col gap-2 justify-start items-start mb-4">
