Add checkout flow

--- a/checkout.html
+++ b/checkout.html
@@ -22,7 +22,7 @@ scripts_code_block: >-
         <input id="img-name" type="text" name="imagem" value="" disabled>
         <input type="hidden" value="artist-inbox">
         <input id="to-email" type="hidden" name="_to" value="">
-        <input type="button" value="Confirmar pedido" class="bg-yellow-400 uppercase text-lg hover:bg-yellow-300 transition-colors">
+        <input type="submit" value="Confirmar pedido" class="bg-yellow-400 uppercase text-lg hover:bg-yellow-300 transition-colors">
       </form>
     </div>
     <div class="col-span-1">
