--- a/checkout.html
+++ b/checkout.html
@@ -16,13 +16,17 @@ scripts_code_block: >-
         Complete os dados e efetue o pagamento para confirmar a sua compra.
       </p>
       <form id="checkout-form" action="" method="post" class="checkout-form">
-        <input type="text" name="email" placeholder="Seu nome">
+        <p class="text-yellow-400 uppercase font-heading text-lg">Dados pessoais:</p>
+        <input type="text" name="name" placeholder="Seu nome">
         <input type="email" name="email" placeholder="Seu email">
-        <input type="tel" name="whatsapp" placeholder="Numero para contato">
-        <input id="img-name" type="text" name="imagem" value="" disabled>
+        <input type="tel" name="whatsapp" placeholder="Número para contato">
+        <label for="image" class="text-yellow-400 uppercase font-heading text-lg">Imagem escolhida:</label>
+        <select type="select" name="image">
+          <option id="img-name" type="text" value="" selected></option>
+        </select>
         <input type="hidden" value="artist-inbox">
         <input id="to-email" type="hidden" name="_to" value="">
-        <input type="submit" value="Confirmar pedido" class="bg-yellow-400 uppercase text-lg hover:bg-yellow-300 transition-colors">
+        <input type="submit" value="Confirmar pedido" class="mt-6 md:w-1/3 mx-auto bg-yellow-400 uppercase text-lg hover:bg-yellow-300 transition-colors">
       </form>
     </div>
     <div class="col-span-1">
@@ -74,6 +78,7 @@ scripts_code_block: >-
   standard.innerText = imageJSON.standard;
   price.innerText = imageJSON.price;
   title.innerText = imageJSON.title;
+  reference.innerText = imageJSON.title;
   artist.innerText = imageJSON.author;
   reference.setAttribute('value',imageJSON.title);
   contact.setAttribute('value', imageJSON.email);
