--- a/checkout.html
+++ b/checkout.html
@@ -12,10 +12,8 @@ scripts_code_block: >-
       <h1 class="text-yellow-400 text-5xl uppercase font-heading mb-6">
         Checkout
       </h1>
-      <p class="editable text-white font-body text-lg mb-8">
-        Complete os dados e efetue o pagamento para confirmar a sua compra.
-      </p>
-      <form id="checkout-form" action="" method="post" class="checkout-form">
+      <p class="text-gray-200 uppercase font-body text-xl mb-4"><span class="text-xl font-bold">1.</span> Complete os dados:</p>
+      <form id="checkout-form" action="" method="post" class="checkout-form mb-8">
         <p class="text-yellow-400 uppercase font-heading text-lg">Dados pessoais:</p>
         <input type="text" name="name" placeholder="Seu nome">
         <input type="email" name="email" placeholder="Seu email">
@@ -26,7 +24,14 @@ scripts_code_block: >-
         </select>
         <input type="hidden" value="artist-inbox">
         <input id="to-email" type="hidden" name="_to" value="">
-        <input type="submit" value="Confirmar pedido" class="mt-6 md:w-1/3 mx-auto bg-yellow-400 uppercase text-lg hover:bg-yellow-300 transition-colors">
+        <p class="text-gray-200 uppercase font-body text-xl my-4"><span class="text-xl font-bold">2.</span> Efetue o pagamento por Pix:</p>
+        <p class="text-gray-200 font-body font-light text-xl">Chave Copia e Cola:</p>
+        <div id="payment-info" class="flex flex-col md:flex-row items-center gap-2">
+          <code id="payment-code" class="bg-gray-200 text-gray-700 p-2 rounded-sm"></code>
+          <p class="text-gray-600 text-sm">(clique para copiar)</p>
+        </div>
+        <p class="text-gray-200 uppercase font-body text-xl my-4"><span class="text-xl font-bold">3.</span> Confirme o pedido após pagamento:</p>
+        <input type="submit" value="Confirmar pedido" class="md:w-1/3 mr-auto bg-yellow-400 uppercase text-lg hover:bg-yellow-300 transition-colors">
       </form>
     </div>
     <div class="col-span-1">
@@ -58,7 +63,9 @@ scripts_code_block: >-
     
   </div>
 </main>
-<script>
+<!-- <script src="/js/cc-form.js"></script> -->
+<script>  
+
   // get JSON from session storage and parse info
   const image = sessionStorage.getItem('image');
   const imageJSON = JSON.parse(image);
@@ -71,6 +78,8 @@ scripts_code_block: >-
   const artist = document.getElementById('img-author');
   const reference = document.getElementById('img-name');
   const contact = document.getElementById('to-email');
+  const payment = document.getElementById('payment-code')
+  
   // Update HTML with info 
 
   imgEl.src = imageJSON.src;
@@ -80,6 +89,12 @@ scripts_code_block: >-
   title.innerText = imageJSON.title;
   reference.innerText = imageJSON.title;
   artist.innerText = imageJSON.author;
+  payment.innerText = imageJSON.payment;
   reference.setAttribute('value',imageJSON.title);
   contact.setAttribute('value', imageJSON.email);
+
+  payment.onclick = function() {
+    navigator.clipboard.writeText(payment.innerText)
+    .then(() => {alert('Código copiado com sucesso!')})
+  }  
 </script>
