--- a/checkout.html
+++ b/checkout.html
@@ -13,7 +13,7 @@ scripts_code_block: >-
         Checkout
       </h1>
       <p class="text-gray-200 uppercase font-body text-xl mb-4"><span class="text-xl font-bold">1.</span> Complete os dados:</p>
-      <form id="checkout-form" action="" method="post" class="checkout-form mb-8">
+      <form id="checkout-form" action="/sucesso" method="post" class="checkout-form mb-8">
         <p class="text-yellow-400 uppercase font-heading text-lg">Dados pessoais:</p>
         <input type="text" name="name" placeholder="Seu nome">
         <input type="email" name="email" placeholder="Seu email">
