Updated '_art/ceus-da-ilha-fer-santos.html' via CloudCannon

--- a/_art/ceus-da-ilha-fer-santos.html
+++ b/_art/ceus-da-ilha-fer-santos.html
@@ -4,10 +4,14 @@ title: Céu da Ilha
 artist: fer
 co-artist: alice
 image: /assets/images/ceus-da-ilha-fer-santos.jpg
-description: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description: |-
+  tudo quanto calo
+  me escuto nele
+  converso com 
+  o silêncio
+  da imensidão
+  que reflete
+  em meus olhos
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
