Edit description to be HTML

--- a/_art/alveolo-raiz-itapema.html
+++ b/_art/alveolo-raiz-itapema.html
@@ -4,7 +4,7 @@ title: Alvéolo •Film 35mm•
 artist: thais
 co-artist:
 image: /assets/images/alveolo-raiz.jpg
-description: >-
+description_html: >-
   •Alvéolo: substantivo masculino; cada uma das cavidades que formam o favo de
   mel das abelhas; cavidade no tecido pulmonar. Geomorfologia. Pequena depressão
   escavada numa rocha homogênea; pequena cavidade em que se fixa um órgão•
