--- a/_art/ceus-da-ilha-fer-santos.html
+++ b/_art/ceus-da-ilha-fer-santos.html
@@ -4,7 +4,7 @@ title: Céu da Ilha
 artist: fer
 co-artist: alice
 image: /assets/images/ceus-da-ilha-fer-santos.jpg
-description: |-
+description_html: |-
   tudo quanto calo
   me escuto nele
   converso com 
