--- a/_art/escala-humana-ilha-do-melo-2018.html
+++ b/_art/escala-humana-ilha-do-melo-2018.html
@@ -4,7 +4,7 @@ title: Escala Humana_Ilha do Mel_2018
 artist: bruno
 co-artist:
 image: /assets/images/mg-6420-1.jpg
-description: Vista do final de tarde, do Farol das Conchas, Ilha de Mel.
+description_html: Vista do final de tarde, do Farol das Conchas, Ilha de Mel.
 dimensions: 60x90 cm
 orientation: Vertical
 print_standard: Felix Schoeller True Fibre 200g/m2
