--- a/_art/escala-humana.html
+++ b/_art/escala-humana.html
@@ -4,7 +4,7 @@ title: Pegada Natural_Ilha do Mel_2020
 artist: bruno
 co-artist:
 image: /assets/images/img-6386.JPG
-description: Natureza Intocada
+description_html: Natureza Intocada
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
