--- a/_art/glaciar-perito-moreno.html
+++ b/_art/glaciar-perito-moreno.html
@@ -4,7 +4,7 @@ title: Glaciar Perito Moreno
 artist: fer
 co-artist:
 image: /assets/images/glaciar-perito-moreno.jpg
-description: >-
+description_html: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
