--- a/_art/paraiso-perdido-gus-schiavon.html
+++ b/_art/paraiso-perdido-gus-schiavon.html
@@ -4,7 +4,7 @@ title: Paraíso Perdido
 artist: gus
 co-artist: alice
 image: /assets/images/gus-schiavon-0001.jpg
-description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description_html: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 105cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
