--- a/_art/pegada-humana-i-ilha-do-mel-2020.html
+++ b/_art/pegada-humana-i-ilha-do-mel-2020.html
@@ -5,7 +5,7 @@ artist: bruno
 co-artist:
 image: >-
   /assets/images/6dd2bc09-c105-43ed-a91e-883a17e81011-a5fb831c-0f72-4877-abff-19dabbbbf924-editar-copiar.jpg
-description: Qual caminho estamos seguindo!? Para onde esses passos irão nos levar?
+description_html: Qual caminho estamos seguindo!? Para onde esses passos irão nos levar?
 dimensions: 60cm x 40cm
 orientation: Vertical
 print_standard: Felix Schoeller True Fibre 200g/m2
