--- a/_art/ascender-raiz-itapema.html
+++ b/_art/ascender-raiz-itapema.html
@@ -4,7 +4,7 @@ title: Ascender - mirada em Morretes •Film 35mm•
 artist: thais
 co-artist: alice
 image: /assets/images/ceu-de-morretes-raiz.jpg
-description: >-
+description_html: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
