--- a/_art/espelho.html
+++ b/_art/espelho.html
@@ -4,7 +4,7 @@ title: Reflexo
 artist: fer
 co-artist:
 image: /assets/images/reflexo.jpg
-description: >-
+description_html: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
