--- a/_art/gravitas-raiz-itapema.html
+++ b/_art/gravitas-raiz-itapema.html
@@ -4,7 +4,7 @@ title: Gravitas •Film 35mm•
 artist: thais
 co-artist: fellipe
 image: /assets/images/dupla-expo-b-raiz.jpg
-description: >-
+description_html: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
