--- a/_art/lepidoptera-raiz-itapema.html
+++ b/_art/lepidoptera-raiz-itapema.html
@@ -4,7 +4,7 @@ title: Lepidoptera
 artist: thais
 co-artist:
 image: /assets/images/lepidoptera---raiz.jpg
-description: >-
+description_html: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
