--- a/_art/maracaipe-gus-schiavon.html
+++ b/_art/maracaipe-gus-schiavon.html
@@ -4,7 +4,7 @@ title: Maracaípe
 artist: gus
 co-artist: alice
 image: /assets/images/gus-schiavon-4529.jpg
-description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description_html: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 90cm
 orientation: Portrait
 print_standard: Felix Schoeller True Fibre 200g/m2
