--- a/_art/texturas-do-mar-gus-schiavon.html
+++ b/_art/texturas-do-mar-gus-schiavon.html
@@ -4,7 +4,7 @@ title: Texturas do Mar
 artist: gus
 co-artist: 
 image: /assets/images/gus-schiavon-0002.jpg
-description: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description_html: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
 dimensions: 60cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
