--- a/_art/viridis-raiz-itapema.html
+++ b/_art/viridis-raiz-itapema.html
@@ -4,7 +4,7 @@ title: Viridis
 artist: thais
 co-artist:
 image: /assets/images/viridis---raiz.jpg
-description: >-
+description_html: >-
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
   beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
   harum placeat quasi tenetur sequi repudiandae incidunt vel?
