--- a/checkout.html
+++ b/checkout.html
@@ -30,7 +30,7 @@ scripts_code_block: >-
           <code id="payment-code" class="bg-gray-200 text-gray-700 p-2 rounded-sm"></code>
           <p class="text-gray-600 text-sm">(clique para copiar)</p>
         </div>
-        <!-- <p id="img-value" class="text-yellow-400 font-bold text-3xl font-body uppercase"></p> -->
+        <p id="img-value" class="text-yellow-400 font-bold text-3xl font-body uppercase"></p>
         <p class="text-gray-200 uppercase font-body text-xl my-4"><span class="text-xl font-bold">3.</span> Confirme o pedido após pagamento:</p>
         <input type="submit" value="Confirmar pedido" class="md:w-1/3 mr-auto bg-yellow-400 uppercase text-lg hover:bg-yellow-300 transition-colors">
       </form>
@@ -69,7 +69,8 @@ scripts_code_block: >-
   // get JSON from session storage and parse info
   const image = sessionStorage.getItem('image');
   const imageJSON = JSON.parse(image);
-
+  console.log(imageJSON);
+window.addEventListener('DOMContentLoaded', function(){
   const imgEl = document.getElementById('selected-img');
   const title = document.getElementById('img-title');
   const dimensions = document.getElementById('img-dimensions');
@@ -97,4 +98,5 @@ scripts_code_block: >-
     navigator.clipboard.writeText(payment.innerText)
     .then(() => {alert('Código copiado com sucesso!')})
   }  
+})
 </script>
