--- a/_art/ceus-da-ilha-fer-santos.html
+++ b/_art/ceus-da-ilha-fer-santos.html
@@ -4,18 +4,10 @@ title: Céu da Ilha
 artist: fer
 co-artist: alice
 image: /assets/images/ceus-da-ilha-fer-santos.jpg
-description_html: |-
-  tudo quanto calo
-  me escuto nele
-
-
-  converso com 
-  o silêncio
-
-
-  da imensidão
-  que reflete
-  em meus olhos
+description_html: >-
+  <p>tudo quanto calo</p><p>me escuto nele</p><p>converso com
+  o</p><p>sil&ecirc;ncio</p><p>da imensid&atilde;o</p><p>que reflete</p><p>em
+  meus olhos</p>
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
