Updated '_art/o-voo-fer-santos.html' via CloudCannon

--- a/_art/o-voo-fer-santos.html
+++ b/_art/o-voo-fer-santos.html
@@ -5,9 +5,15 @@ artist: fer
 co-artist: fellipe
 image: /assets/images/o-voo-fer-santos.jpg
 description_html: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+  <p>Sonho com o mundo em que o amor &eacute; o caminho, em que a
+  emo&ccedil;&atilde;o transborda e o carinho bate a
+  porta.</p><p>&nbsp;</p><p>Observo um planeta em que tudo &eacute; passageiro e
+  os passageiros somos n&oacute;s, em que a verdade n&atilde;o tem voz e, quando
+  exposta, logo recebe contraproposta. &nbsp;</p><p>&nbsp;</p><p>Acordo no lugar
+  em que a dor &eacute; latente e a crueldade ligeira(mente) ser&aacute; vencida
+  pelo bem.</p><p>&nbsp;</p><p>Acredito e sonho com a verdade crescente, olhares
+  transparentes, sorrisos verdadeiros, abra&ccedil;os fraternos, amores eternos,
+  com a pureza da alma, sentimento que acalma.</p>
 dimensions: 40cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
