Updated '_art/contrastes-gus-schiavon.html' via CloudCannon

--- a/_art/contrastes-gus-schiavon.html
+++ b/_art/contrastes-gus-schiavon.html
@@ -4,7 +4,10 @@ title: Contrastes
 artist: gus
 co-artist: alice
 image: /assets/images/contrastes-gus-schiavon.jpg
-description_html: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description_html: >-
+  <p>Teia</p><p>n&atilde;o h&aacute; nada em mim</p><p>maior ou
+  melhor</p><p>naquilo ou naquele</p><p>tudo que me toca</p><p>&eacute; fio que
+  se conecta</p><p>ao outro</p><p>n&atilde;o sou</p><p>SOMOS</p>
 dimensions: 60cm x 90cm
 orientation: Portrait
 print_standard: Felix Schoeller True Fibre 200g/m2
@@ -13,3 +16,4 @@ price: 1800
 other_dimensions:
   - size:
 ---
+
