--- a/checkout.html
+++ b/checkout.html
@@ -27,7 +27,7 @@ scripts_code_block: >-
         <p class="text-gray-200 uppercase font-body text-xl my-4"><span class="text-xl font-bold">2.</span> Efetue o pagamento por Pix:</p>
         <p class="text-gray-200 font-body font-light text-xl">Chave Copia e Cola:</p>
         <div id="payment-info" class="flex flex-col md:flex-row items-center gap-2">
-          <code id="payment-code" class="bg-gray-200 text-gray-700 p-2 rounded-sm"></code>
+          <code id="payment-code" class="bg-gray-200 text-gray-700 p-2 rounded-sm border-2 border-yellow-300"></code>
           <p class="text-gray-600 text-sm">(clique para copiar)</p>
         </div>
         <p id="img-value" class="text-yellow-400 font-bold text-3xl font-body uppercase"></p>
