Updated '_art/alveolo-raiz-itapema.html' via CloudCannon

--- a/_art/alveolo-raiz-itapema.html
+++ b/_art/alveolo-raiz-itapema.html
@@ -2,15 +2,13 @@
 layout: photo
 title: Alvéolo •Film 35mm•
 artist: thais
-co-artist:
+co-artist: alice
 image: /assets/images/alveolo-raiz.jpg
 description_html: >-
-  •Alvéolo: substantivo masculino; cada uma das cavidades que formam o favo de
-  mel das abelhas; cavidade no tecido pulmonar. Geomorfologia. Pequena depressão
-  escavada numa rocha homogênea; pequena cavidade em que se fixa um órgão•
-
-
-  Fotografia analógica, em dupla-exposição. Cine-film, 35mm. 
+  <p>Meu cora&ccedil;&atilde;o flor</p><p>oper&aacute;rio de
+  criancidades</p><p>cultiva bordados</p><p>gra&uacute;dos</p><p>de
+  pequenos</p><p>detalhes</p><p>-</p><p>Fotografia anal&oacute;gica, em
+  dupla-exposi&ccedil;&atilde;o. Cine-film, 35mm.</p>
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
