--- a/_art/ascender-raiz-itapema.html
+++ b/_art/ascender-raiz-itapema.html
@@ -5,9 +5,10 @@ artist: thais
 co-artist: alice
 image: /assets/images/ceu-de-morretes-raiz.jpg
 description_html: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+  <p>Enxergar o outro todo</p><p>-</p><p>Escutar a terra</p><p>tocar o
+  vento</p><p>respirar as &aacute;guas</p><p>sentir as plantas</p><p>viver a
+  luz</p><p>a arte est&aacute; na</p><p>sacada genu&iacute;na de</p><p>que
+  fa&ccedil;o parte</p>
 dimensions: 60cm x 40cm
 orientation: Portrait
 print_standard: Felix Schoeller True Fibre 200g/m2
