Updated '_art/coqueiros-gus-schiavon.html' via CloudCannon

--- a/_art/coqueiros-gus-schiavon.html
+++ b/_art/coqueiros-gus-schiavon.html
@@ -2,9 +2,13 @@
 layout: photo
 title: Coqueiros
 artist: gus
-co-artist: fellipe
+co-artist: alice
 image: /assets/images/gus-schiavon-0877.jpg
-description_html: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description_html: >-
+  <p>Teus olhos meus</p><p>suas ra&iacute;zes em n&oacute;s</p><p>nessa teia
+  chamada</p><p>vida</p><p>h&aacute; que se sentir, h&aacute;</p><p>que se
+  espalhar</p><p>por todos os cantos</p><p>que arte transmuta</p><p>e o amor
+  transforma</p><p>&nbsp;</p>
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
@@ -13,3 +17,4 @@ price: 750
 other_dimensions:
   - size:
 ---
+
