Updated '_art/escala-humana-ilha-do-melo-2018.html' via CloudCannon

--- a/_art/escala-humana-ilha-do-melo-2018.html
+++ b/_art/escala-humana-ilha-do-melo-2018.html
@@ -2,9 +2,13 @@
 layout: photo
 title: Escala Humana_Ilha do Mel_2018
 artist: bruno
-co-artist:
+co-artist: fellipe
 image: /assets/images/mg-6420-1.jpg
-description_html: Vista do final de tarde, do Farol das Conchas, Ilha de Mel.
+description_html: >-
+  <p>A solitude
+  ensina</p><p>Humaniza</p><p>Consola</p><p>Acompanha</p><p>Acalma</p><p>Inspira</p><p>Ressignifica</p><p>Opini&otilde;es
+  turvas</p><p>Olhares cegos</p><p>Preconceitos infundados</p><p>Padr&otilde;es
+  ultrapassados</p><p>Cora&ccedil;&otilde;es desconectados</p>
 dimensions: 60x90 cm
 orientation: Vertical
 print_standard: Felix Schoeller True Fibre 200g/m2
