--- a/_art/escala-humana.html
+++ b/_art/escala-humana.html
@@ -2,9 +2,12 @@
 layout: photo
 title: Pegada Natural_Ilha do Mel_2020
 artist: bruno
-co-artist:
+co-artist: fellipe
 image: /assets/images/img-6386.JPG
-description_html: Natureza Intocada
+description_html: >-
+  <p>Caminhar para longe</p><p>&Eacute; preciso</p><p>De falsas
+  promessas</p><p>De tanta
+  gan&acirc;ncia</p><p>Arrog&acirc;ncia</p><p>Ego&iacute;smo</p>
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
