Updated '_art/espelho.html' via CloudCannon

--- a/_art/espelho.html
+++ b/_art/espelho.html
@@ -5,7 +5,7 @@ artist: fer
 co-artist: alice
 image: /assets/images/reflexo.jpg
 description_html: >-
-  <p>enxergar</p><p>A L &Eacute;
+  <p>enxergar</p><p>A&nbsp; &nbsp;L.&nbsp; &Eacute;.&nbsp;
   M</p><p>vertical</p><p>horizontal</p><p>Transversal</p><p>universal</p><p>para</p><p>n&atilde;o
   ficar</p><p>aqu&eacute;m</p><p>ref&eacute;m</p><p>(dos desejos m&oacute;rbidos
   que movem)</p><p>o
