Updated '_art/glaciar-perito-moreno.html' via CloudCannon

--- a/_art/glaciar-perito-moreno.html
+++ b/_art/glaciar-perito-moreno.html
@@ -2,17 +2,25 @@
 layout: photo
 title: Glaciar Perito Moreno
 artist: fer
-co-artist:
+co-artist: fellipe
 image: /assets/images/glaciar-perito-moreno.jpg
 description_html: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+  <p>Como &eacute; bom sentir a imensid&atilde;o</p><p>A presen&ccedil;a do
+  desconhecido</p><p>O vento gelado que exige e ensina</p><p>Num reencontro
+  &uacute;nico</p><p>&nbsp;</p><p>Como &eacute; gratificante tocar as
+  nuvens</p><p>Valorizar cada pequena conquista</p><p>Transpirar
+  supera&ccedil;&atilde;o</p><p>Degustar inesperadas
+  revela&ccedil;&otilde;es</p><p>&nbsp;</p><p>E o al&iacute;vio do
+  amanhecer</p><p>Acompanhado do sol ardente</p><p>Anuncia
+  silenciosamente</p><p>Armadilhas e fragilidades</p><p>&nbsp;</p><p>Eis um
+  universo em (des)constru&ccedil;&atilde;o</p><p>Em que a certeza da
+  insignific&acirc;ncia choca</p><p>A maturidade aflora</p><p>O grito de socorro
+  ecoa</p>
 dimensions: 90cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
-price: 1300
+price: 2000
 other_dimensions:
   - size: 60cm x 40cm
 ---
