Updated '_art/gravitas-raiz-itapema.html' via CloudCannon

--- a/_art/gravitas-raiz-itapema.html
+++ b/_art/gravitas-raiz-itapema.html
@@ -2,12 +2,12 @@
 layout: photo
 title: Gravitas •Film 35mm•
 artist: thais
-co-artist: fellipe
+co-artist: alice
 image: /assets/images/dupla-expo-b-raiz.jpg
 description_html: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+  <p>De noite me dobro em sil&ecirc;ncios</p><p>Durante o dia colho paisagens
+  que me fazem</p><p>crescer</p><p>N&atilde;o sou boa em vislumbrar
+  gaiolas,</p><p>mas sou excelente em fabricar ninhos.</p>
 dimensions: 60cm x 40cm
 orientation: Portrait
 print_standard: Felix Schoeller True Fibre 200g/m2
