--- a/_art/impacto-1-bruno-santos.html
+++ b/_art/impacto-1-bruno-santos.html
@@ -4,7 +4,7 @@ title: Pegada Humana II_Ilha das Peças_2019
 artist: bruno
 image: >-
   /assets/images/89318ec4-8f57-4cdd-b75e-09c12cc9c664-a29b0352-aacc-4687-b846-af74311fe932-2.jpg
-description_html: Qual é o caminho que estamos trilhando? Para onde esse caminho vai nos levar?
+description_html: <p>Na areia da arena</p><p>onde o pl&aacute;stico virou rei</p>
 dimensions: 40cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
